--- a/pom.xml
+++ b/pom.xml
@@ -66,23 +66,47 @@
             <url>https://mvn.lumine.io/repository/maven-public/</url>
         </repository>
 		<repository>
-            <id>lumine-snapshot</id>
-            <url>http://mvn.lumine.io/repository/maven-snapshots/</url>
-        </repository>
+			<id>placeholderapi</id>
+			<url>https://repo.extendedclip.com/content/repositories/placeholderapi/</url>
+		</repository>
+		<repository>
+			<id>citizens-repo</id>
+			<url>https://maven.citizensnpcs.co/repo</url>
+		</repository>
 	</repositories>
 
 	<dependencies>
-
 		<dependency>
-			<groupId>net.md-5</groupId>
-			<artifactId>bungeecord-chat</artifactId>
-			<version>1.16-R0.4</version>
+			<groupId>io.papermc.paper</groupId>
+			<artifactId>paper-api</artifactId>
+			<version>1.20.1-R0.1-SNAPSHOT</version>
+			<scope>provided</scope>
 		</dependency>
+		<!-- 插件依賴項 -->
+		<dependency>
+			<groupId>io.lumine</groupId>
+			<artifactId>Mythic-Dist</artifactId>
+			<version>5.3.2</version>
+			<scope>provided</scope>
+		</dependency>
+		<dependency>
+			<groupId>me.clip</groupId>
+			<artifactId>placeholderapi</artifactId>
+			<version>2.11.1</version>
+			<scope>provided</scope>
+		</dependency>
+		<dependency>
+			<groupId>net.citizensnpcs</groupId>
+			<artifactId>citizensapi</artifactId>
+			<version>2.0.20-SNAPSHOT</version>
+			<type>jar</type>
+			<scope>compile</scope>
+		</dependency>
+		<!-- 其他依賴項 -->
 		<dependency>
 			<groupId>com.google.code.gson</groupId>
 			<artifactId>gson</artifactId>
-			<version>2.8.0</version>
-			<scope>compile</scope>
+			<version>2.10.1</version>
 		</dependency>
 		<dependency>
 			<groupId>com.zaxxer</groupId>
@@ -95,21 +119,10 @@
 			<version>3.12.7</version>
 		</dependency>
 		<dependency>
-			<groupId>io.lumine</groupId>
-			<artifactId>Mythic-Dist</artifactId>
-			<version>5.2.1-SNAPSHOT</version>
-			<scope>provided</scope>
-		</dependency>
-		<dependency>
 			<groupId>commons-io</groupId>
 			<artifactId>commons-io</artifactId>
-			<version>2.6</version>
+			<version>2.13.0</version>
 		</dependency>
-	<dependency>
-			<groupId>commons-io</groupId>
-			<artifactId>commons-io</artifactId>
-			<version>2.6</version>
-			</dependency>
 	</dependencies>
 
 </project > 
